fix overflow for text

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ div {
   .text {
     flex-direction:column;
     width:100px; 
+    overflow:hidden;
 
   }
 
